--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,75 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    id="WebApp_ID" version="2.5">
- 
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+
 	<display-name>Counter Web Application</display-name>
-	
-<!-- 	start :- For non json jersey implementation: -->
-<!-- 	<welcome-file-list> -->
-<!--         <welcome-file>index.html</welcome-file> -->
-<!--     </welcome-file-list> -->
- 
-<!-- 	<servlet> -->
-<!-- 		<servlet-name>spring</servlet-name> -->
-<!-- 		<servlet-class> -->
-<!-- 			org.springframework.web.servlet.DispatcherServlet -->
-<!-- 		</servlet-class> -->
-<!-- 		<load-on-startup>1</load-on-startup> -->
-<!-- 	</servlet> -->
- 
-<!-- 	<servlet-mapping> -->
-<!-- 		<servlet-name>spring</servlet-name> -->
-<!-- 		<url-pattern>/rest/*</url-pattern> -->
-<!-- 	</servlet-mapping> -->
- 
-<!-- 	<context-param> -->
-<!-- 		<param-name>contextConfigLocation</param-name> -->
-<!-- 		<param-value>/WEB-INF/spring-servlet.xml</param-value> -->
-<!-- 	</context-param> -->
- 
-<!-- 	<listener> -->
-<!-- 		<listener-class> -->
-<!-- 			org.springframework.web.context.ContextLoaderListener -->
-<!-- 		</listener-class> -->
-<!-- 	</listener> -->
-<!-- 	end :- For non json jersey implementation: -->
-	
-<!-- 	start :- for jersey and json to work -->
+
+	<!-- start :- For non json jersey implementation: -->
+	<!-- <welcome-file-list> -->
+	<!-- <welcome-file>index.html</welcome-file> -->
+	<!-- </welcome-file-list> -->
+
+	<!-- <servlet> -->
+	<!-- <servlet-name>spring</servlet-name> -->
+	<!-- <servlet-class> -->
+	<!-- org.springframework.web.servlet.DispatcherServlet -->
+	<!-- </servlet-class> -->
+	<!-- <load-on-startup>1</load-on-startup> -->
+	<!-- </servlet> -->
+
+	<!-- <servlet-mapping> -->
+	<!-- <servlet-name>spring</servlet-name> -->
+	<!-- <url-pattern>/rest/*</url-pattern> -->
+	<!-- </servlet-mapping> -->
+
+	<!-- <context-param> -->
+	<!-- <param-name>contextConfigLocation</param-name> -->
+	<!-- <param-value>/WEB-INF/spring-servlet.xml</param-value> -->
+	<!-- </context-param> -->
+
+	<!-- <listener> -->
+	<!-- <listener-class> -->
+	<!-- org.springframework.web.context.ContextLoaderListener -->
+	<!-- </listener-class> -->
+	<!-- </listener> -->
+	<!-- end :- For non json jersey implementation: -->
+
+	<!-- start :- for jersey and json to work -->
 
 	<servlet>
 		<servlet-name>jersey-serlvet</servlet-name>
-		<servlet-class>
-			org.glassfish.jersey.servlet.ServletContainer
-		</servlet-class>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.onetesthub.controller</param-value>
-        </init-param>
-        <init-param>
-            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-            <param-value>true</param-value>
-        </init-param>
+			<param-name>jersey.config.server.provider.packages</param-name>
+			<param-value>com.onetesthub.controller</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-        <servlet-name>jersey-serlvet</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
-    </servlet-mapping>
+		<servlet-name>jersey-serlvet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring-servlet.xml</param-value>
+		<param-value>
+			/WEB-INF/spring-security.xml /WEB-INF/spring-servlet.xml 
+		</param-value>
 	</context-param>
 
-    <listener>
-        <listener-class>
-            org.springframework.web.context.ContextLoaderListener
-        </listener-class>
-    </listener>
+	<listener>
+		<listener-class>
+			org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
 
-	
+	<!-- for spring security -->
+
+ <!-- Filter to secure Jersey (JAX-RS) services -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping> 
+
 </web-app>
